adding prop documentation manually

--- a/apps/site/docs/Components/Accordion.mdx
+++ b/apps/site/docs/Components/Accordion.mdx
@@ -1,6 +1,8 @@
 import Default from './Accordion/Default';
 import LeftCaret from './Accordion/LeftCaret';
 import NoCaret from './Accordion/NoCaret';
+import { AccordionProps } from './Accordion/Props';
+import ArgsTable from './ArgsTable';
 
 # Accordion
 
@@ -11,6 +13,8 @@ Accordions are useful when you want to toggle between hiding and showing additio
 <Default />
 
 ## Props
+
+<ArgsTable props={AccordionProps} />
 
 ## Caret Options
 
