adding box functions and changing case

--- a/apps/site/docs/Components/Accordion.mdx
+++ b/apps/site/docs/Components/Accordion.mdx
@@ -1,6 +1,6 @@
-import Default from './Accordion/Default';
-import LeftCaret from './Accordion/LeftCaret';
-import NoCaret from './Accordion/NoCaret';
+import Default from './accordion/default';
+import LeftCaret from './accordion/left-caret';
+import NoCaret from './accordion/no-caret';
 
 # Accordion
 
