--- a/apps/site/docs/Components/Alert.mdx
+++ b/apps/site/docs/Components/Alert.mdx
@@ -1,9 +1,9 @@
 import { Alert } from '@rhino-ui/components/src/components/alert/alert';
-import Variants from './Alert/Variants';
-import CustomJsx from './Alert/CustomJsx';
-import RenderFunction from './Alert/RenderFunction';
-import Closable from './Alert/Closable';
-import DesignTokens from './Alert/DesignTokens';
+import Variants from './alert/variants';
+import CustomJsx from './alert/custom-jsx';
+import RenderFunction from './alert/render-function';
+import Closable from './alert/closable';
+import DesignTokens from './alert/design-tokens';
 
 # Alert
 
