--- a/apps/site/docs/Components/Badge.mdx
+++ b/apps/site/docs/Components/Badge.mdx
@@ -1,7 +1,7 @@
 import { Badge } from '@rhino-ui/components/src/components/badge/badge';
-import Variants from './Badge/Variants';
-import Sizes from './Badge/Sizes';
-import DesignTokens from './Badge/DesignTokens';
+import Variants from './badge/variants';
+import Sizes from './badge/sizes';
+import DesignTokens from './badge/design-tokens';
 
 # Badge
 
