add BrowserOnly annotation so components can build

--- a/apps/site/docs/components/date-input.mdx
+++ b/apps/site/docs/components/date-input.mdx
@@ -1,6 +1,7 @@
 import { DateInput } from '@rhino-ui/components/src/components/date-input/date-input';
 
 import {
+    Example,
     Default,
     DateRange,
     MinMaxDates,
@@ -15,14 +16,7 @@ Avoid using this component if the user needs to enter a date that is many years 
 For entering these types of dates we recommend using the `TextInput` component with a `date` mask. See an example here:
 [TextInput Date Example](?path=/docs/components-textinput-overview--with-date-mask)
 
-<DateInput
-    textInputProps={{
-        id: 'exampleDateInput',
-        name: 'selectDate',
-        label: 'Select a Date',
-        placeholder: 'e.g. 11/02/2020',
-    }}
-/>
+<Example />
 
 ## Props
 
