--- a/apps/site/docs/components/file-upload.mdx
+++ b/apps/site/docs/components/file-upload.mdx
@@ -24,7 +24,7 @@ import {
 
 Use FileUpload to capture files for upload in forms or elsewhere.
 
-<FileUpload labelText="My File" id="demoFileUpload" />
+<FileUpload labelText="My File" id="demoFileUpload" onChange={() => {}} />
 
 ## Props
 
